[package]
name = "bevy_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.2" # physics (just for fun)
bevy = { version = "0.14.2", features = ["serialize"] }
bincode = "1.3.3"
iyes_perf_ui = "0.3.0"
rustls = { version = "0.23.14" }
thiserror = "1.0.64"
tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots", "rustls"] }
