[package]
name = "bevy_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.2"                                       # physics (just for fun)
bevy = { version = "0.14.2", features = ["serialize"] }
bincode = "1.3.3"
iyes_perf_ui = "0.3.0"
thiserror = "1.0.64"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rustls = { version = "0.23.14" }
tungstenite = { version = "0.24.0", features = [
    "rustls-tls-webpki-roots",
    "rustls",
] }

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = ["WebSocket", "EventTarget", "MessageEvent", "BinaryType"] }
send_wrapper = "0.6.0"
