[package]
name = "bevy_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.2"                                       # physics (just for fun)
bevy = { version = "0.14.2", features = ["serialize"] }
bincode = "1.3.3"
iyes_perf_ui = "0.3.0"
thiserror = "1.0.64"

# Add setup options from https://bevyengine.org/learn/quick-start/getting-started/setup/
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


# Platform dependent dependencies for networking
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rustls = { version = "0.23.14" }
tungstenite = { version = "0.24.0", features = [
    "rustls-tls-webpki-roots",
    "rustls",
] }

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = ["WebSocket", "EventTarget", "MessageEvent", "BinaryType"] }
send_wrapper = "0.6.0"
